syntax = "proto3";

package healthcare;

option java_multiple_files = true;
option java_package = "com.healthcare.grpc.auth";
option java_outer_classname = "AuthServiceProto";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string message = 2;
}
